--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -7,21 +7,34 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 2px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 20px;
+  margin: 4px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 4px;
+  padding: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 4px;
+  padding: 8px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: auto;
+  width: 30%;
+  height: 35px;
 }
